--- a/site/index.html
+++ b/site/index.html
@@ -7,62 +7,162 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-<style>
-body {
-	font: 20px Montserrat; sans-serif;
-	line-height: 1.8;
-	color: #f5f6f7;
-}
-p {
-	font-size: 16px;
-}
-.margin {
-	margin-bottom: 45px;
-}
-.bg-1 {
-	background-color: #2c3e50;
-	color: #ecf0f1;
-}
-.bg-2 {
-	background-color: #3498db;
-	color: #ecf0f1;
-}
-.bg-3 {
-	background-color: #ecf0f1;
-	color: black;
-}
-.bg-4 {
-	background-color: #2c3e50;
-	color: #ecf0f1;
-}
-.container-fluid {
-	padding-top: 50px;
-	padding-bottom: 50px;
-}
-</style>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/Chart.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+<style>
+html, body {
+	width: 100%;
+	height: 100%;
+}
+body {
+    font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
+}
+hr {
+    max-width: 50px;
+    border-color: #fff;
+    border-width: 3px;
+}
+a {
+    -webkit-transition: all .35s;
+    -moz-transition: all .35s;
+    transition: all .35s;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+}
+p {
+    margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 1.5;
+}
+section {
+	padding: 100px 0;
+}
+header {
+    position: relative;
+    width: 100%;
+    min-height: auto;
+    text-align: center;
+    color: #fff;
+    background-color: #2c3e50;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+header .header-content {
+    position: relative;
+    width: 100%;
+    padding: 100px 15px;
+    text-align: center;
+}
+header .header-content .header-content-inner h1 {
+    margin-top: 0;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+@media(min-width:768px) {
+    header {
+        min-height: 100%;
+    }
+    header .header-content {
+        position: absolute;
+        top: 50%;
+        padding: 0 50px;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
+    header .header-content .header-content-inner {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 1000px;
+    }
+}
+.section-heading {
+	margin-top: 0;
+}
+.bg-primary {
+	background-color: #2c3e50;
+	color: #fff;
+}
+.bg-secondary {
+	background-color: #3498db;
+	color: #fff;
+}
+#myostatus {
+	position: fixed;
+	top: 50px;
+	width: 100%
+}
+</style>
 </head>
-<body>
-<div class="container-fluid bg-1 text-center">
-	<h1 class="margin">MyoLearn</h1>
-	<h3>Machine Learning with Myo</h3>
-</div>
-<div class="container-fluid bg-2 text-center">
-	<h3 class="text-center" id="myostatus">Waiting for Myo to be connected...</h3>
-</div>
-<div class="container-fluid bg-3 text-center">
-	<div class="col-sm-6">
-		<canvas id="gyroChart" class="myGraph" width="400" height="400"></canvas>
+
+<body id="page-top">
+	<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+					<span class="sr-only">Navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand page-scroll" href="#page-top">MyoLearn</a>
+				</button>
+			</div>
+		<div class="collapse navbar-collapse" id="navbar-collapse-1">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#record">Record</a></li>
+				<li><a href="#train">Train</a></li>
+			</ul>
+		</div>
+	</nav>
+	<header class="bg-primary">
+		<div class="header-content">
+			<div class="header-content-inner">
+				<h1>Machine Learning with Myo</h1>
+				<hr>
+				<p>Real-time Myo data visualization and recording. Training various classifiers. Real-time prediction.</p>
+			</div>
+		</div>
+	</header>
+	<div class="bg-secondary text-center collapse in" id="myostatus">
+		<h5>Waiting for Myo to be connected...</h5>
 	</div>
-	<div class="col-sm-6">
-		<canvas id="accelChart" class="myGraph" width="400" height="400"></canvas>
-	</div>
-</div>
-<footer class="container-fluid bg-4 text-center">
-	<p>Made by Dylan Ebert</p>
-</footer>
+	<section id="record">
+		<div class="container">
+			<div class="col-sm-6">
+				<canvas id="gyroChart" class="myGraph" width="400" height="400"></canvas>
+			</div>
+			<div class="col-sm-6">
+				<canvas id="accelChart" class="myGraph" width="400" height="400"></canvas>
+			</div>
+		</div>
+	</section>
+	<section class="bg-secondary" id="train">
+		<div class="container text-center">
+			<h2 class="section-heading">Here be training</h2>
+		</div>
+	</section>
+	<section class="bg-primary">
+		<div class="container text-center">
+			<h2>Heracleia Human-Centered Computing Lab</h2>
+			<hr>
+			<p>Page made by Dylan Ebert</p>
+		</div>
+	</section>
+</body>
 <script>	
 	var gyroctx = $('#gyroChart'),
 		accelctx = $('#accelChart'),
@@ -161,17 +261,21 @@ p {
 		}
 	});
 	
-	var socket = io.connect();
+	var socket = io('/site_namespace');
 	socket.on('myostatus', function(data) {
-		$('#myostatus').text(data);
+		$('#myostatus').collapse('show');
+		$('#myostatus').html("<h5>" + data + "</h5>");
+		setTimeout(function() {
+			$('#myostatus').collapse('hide');
+		}, 2000);
 	});
-	socket.on('myoout', function(data) {		
+	socket.on('data', function(data) {		
 		//Update graphs
 		for(i = 0; i < 3; i++) {
 			gyrodata.datasets[i].data.shift();
 			acceldata.datasets[i].data.shift();
-			gyrodata.datasets[i].data.push(data.myoout[i+1]);
-			acceldata.datasets[i].data.push(data.myoout[i+4]);
+			gyrodata.datasets[i].data.push(data[i+1]);
+			acceldata.datasets[i].data.push(data[i+4]);
 		}
 		gyroChart.data = gyrodata;
 		accelChart.data = acceldata;
@@ -179,5 +283,4 @@ p {
 		accelChart.update();
 	});		
 </script>
-</body>
 </html>
