--- a/index.html
+++ b/index.html
@@ -101,12 +101,8 @@
 				<div class="modal-body">
 					<form role="form">
 						<div class="form-group">
-							<label for="cdc">Choose data class:</label>
-							<select class="form-control" id="cdc">
-								<option>Test</option>
-								<option>Resting</option>
-								<option>Assembling</option>
-							</select>
+							<label for="cdc">Enter data classification:</label>
+							<input type="text" class="form-control" id="cdc">
 						</div>
 						<button type="submit" class="btn btn-success" id="recordModalConfirm">Confirm</button>
 					</form>					
@@ -119,7 +115,17 @@
 		<div class="container">
 			<h2 class="section-heading">Train</h2>
 			<hr>
-			<a class="btn btn-default" role="button" id="svm_train_button">SVM</a>
+			<form role="form">
+				<div class="form-group">
+					<label for="tdc">Select training classes:</label>
+					<select multiple class="form-control" id="tdc">
+					</select>
+				</div>
+				<button type="submit" class="btn btn-default" id="svm_train_button">Start</button>
+			</form>
+			<div id="train_status">
+			
+			</div>
 		</div>
 	</section>
 	<!-- Predict Section -->
@@ -127,7 +133,14 @@
 		<div class="container">
 			<h2 class="section-heading">Predict</h2>
 			<hr class="hr-dark">
-			<a class="btn btn-default" role="button" id="svm_predict_button">SVM</a>
+			<form role="form">
+				<div class="form-group">
+					<label for="pdc">Select prediction model:</label>
+					<select class="form-control" id="pdc">						
+					</select>
+				</div>
+				<button type="submit" class="btn btn-default" id="svm_predict_button">Start</button>
+			</form>
 		</div>
 	</section>
 	<!-- Footer -->
