--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-6">
-					<canvas id="gyroChart" class="myGraph" width="400" height="400"></canvas>
+					<canvas id="gyroChart" width="400" height="400"></canvas>
 				</div>
 				<div class="col-sm-6">
-					<canvas id="accelChart" class="myGraph" width="400" height="400"></canvas>
+					<canvas id="accelChart" width="400" height="400"></canvas>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-7 col-sm-offset-2">
+				<div class="col-sm-5 col-sm-offset-3">
 					<div class="btn-group btn-group-justified">
 						<div class="btn-group">
 							<button type="button" class="btn btn-primary" id="recordButton">Record</button>
@@ -118,10 +118,11 @@
 			<form role="form">
 				<div class="form-group">
 					<label for="tdc">Select training classes:</label>
-					<select multiple class="form-control" id="tdc">
+					<select multiple="multiple" class="form-control" id="tdc">
 					</select>
 				</div>
-				<button type="submit" class="btn btn-default" id="svm_train_button">Start</button>
+				<button type="button" class="btn btn-default" id="svm_train_button">Start</button>
+				</div>
 			</form>
 			<div id="train_status">
 			
@@ -139,8 +140,18 @@
 					<select class="form-control" id="pdc">						
 					</select>
 				</div>
-				<button type="submit" class="btn btn-default" id="svm_predict_button">Start</button>
+				<div class="btn-group">
+					<button type="button" class="btn btn-primary" id="svm_predict_button">Start</button>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-primary" id="svm_predict_stop">Stop</button>
+				</div>
 			</form>
+			<div class="row" style="margin-top: 70px">
+				<div class="col-sm-4 col-sm-offset-4">
+					<canvas id="predictChart" style="pointer-events: none" width="400" height="400"></canvas>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!-- Footer -->
