--- a/index.html
+++ b/index.html
@@ -110,6 +110,22 @@
 			</div>
 		</div>
 	</div>
+	<!-- Overwrite modal -->
+	<div id="overwriteModal" class="modal fade" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h2>That class already exists. What do you want to do?</h2>
+				</div>
+				<div class="modal-body">
+					<button type="button" class="btn btn-success" id="overwriteAppend">Append</button>
+					<button type="button" class="btn btn-danger" id="overwriteOverwrite">Overwrite</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- Training Section -->
 	<section class="bg-secondary" id="train">
 		<div class="container">
@@ -141,7 +157,7 @@
 					</select>
 				</div>
 				<div class="btn-group">
-					<button type="button" class="btn btn-primary" id="svm_predict_button">Start</button>
+					<button type="button" class="btn btn-primary" id="svm_predict_start">Start</button>
 				</div>
 				<div class="btn-group">
 					<button type="button" class="btn btn-primary" id="svm_predict_stop">Stop</button>
@@ -149,7 +165,7 @@
 			</form>
 			<div class="row" style="margin-top: 70px">
 				<div class="col-sm-4 col-sm-offset-4">
-					<canvas id="predictChart" style="pointer-events: none" width="400" height="400"></canvas>
+					<canvas id="predictChart" class="collapse" style="pointer-events: none" width="400" height="400"></canvas>
 				</div>
 			</div>
 		</div>
