--- a/index.html
+++ b/index.html
@@ -164,8 +164,14 @@
 				</div>
 			</form>
 			<div class="row" style="margin-top: 70px">
-				<div class="col-sm-4 col-sm-offset-4">
-					<canvas id="predictChart" class="collapse" style="pointer-events: none" width="300" height="300"></canvas>
+				<div class="col-sm-4">
+					<canvas id="svmPredictChart" style="pointer-events: none" width="300" height="300"></canvas>
+				</div>
+				<div class="col-sm-4">
+					<canvas id="hmmPredictChart" style="pointer-events: none" width="300" height="300"></canvas>
+				</div>
+				<div class="col-sm-4">
+					<canvas id="nnPredictChart" style="pointer-events: none" width="300" height="300"></canvas>
 				</div>
 			</div>
 		</div>
